// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepList renders correctly  1`] = `
<DocumentFragment>
  .cache-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.cache-ubtlu3-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.cache-1k74lo7-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="cache-1abqgir-Steps ewuati22"
  >
    <li
      class="cache-ubtlu3-Step ewuati21"
    >
      <div
        class="cache-1k74lo7-StyledContainer e11loam60"
      >
        1
      </div>
      <div
        class="cache-66nq81-StyledDiv ewuati20"
      >
        Item 1
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with bulletIcon & sentiment 1`] = `
<DocumentFragment>
  .cache-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.cache-ubtlu3-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.cache-1h0t7zq-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #22674e;
  background: #daf6ec;
  border: 1px solid #daf6ec;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-32ydu7-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.cache-32ydu7-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="cache-1abqgir-Steps ewuati22"
  >
    <li
      class="cache-ubtlu3-Step ewuati21"
    >
      <div
        class="cache-1h0t7zq-StyledContainer e11loam60"
      >
        <svg
          class="cache-32ydu7-sizeStyles e1gt4cfo0"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M18 10a8 8 0 1 1-16 0 8 8 0 0 1 16 0m-8-5a.75.75 0 0 1 .75.75v4.5a.75.75 0 0 1-1.5 0v-4.5A.75.75 0 0 1 10 5m0 10a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="cache-66nq81-StyledDiv ewuati20"
      >
        Item 1
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with bulletIcon 1`] = `
<DocumentFragment>
  .cache-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.cache-ubtlu3-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.cache-1k74lo7-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-32ydu7-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.cache-32ydu7-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="cache-1abqgir-Steps ewuati22"
  >
    <li
      class="cache-ubtlu3-Step ewuati21"
    >
      <div
        class="cache-1k74lo7-StyledContainer e11loam60"
      >
        <svg
          class="cache-32ydu7-sizeStyles e1gt4cfo0"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M18 10a8 8 0 1 1-16 0 8 8 0 0 1 16 0m-8-5a.75.75 0 0 1 .75.75v4.5a.75.75 0 0 1-1.5 0v-4.5A.75.75 0 0 1 10 5m0 10a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="cache-66nq81-StyledDiv ewuati20"
      >
        Item 1
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with disabled state & bullet icon 1`] = `
<DocumentFragment>
  .cache-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.cache-g6qori-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #b5b7bd;
}

.cache-1n3x46n-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #727683;
  background: #e9eaeb;
  border: none;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-32ydu7-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.cache-32ydu7-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="cache-1abqgir-Steps ewuati22"
  >
    <li
      class="cache-g6qori-Step ewuati21"
    >
      <div
        class="cache-1n3x46n-StyledContainer e11loam60"
      >
        <svg
          class="cache-32ydu7-sizeStyles e1gt4cfo0"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M16.705 4.153a.75.75 0 0 1 .142 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="cache-66nq81-StyledDiv ewuati20"
      >
        <div>
          Item 1 with disabled state
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with disabled state 1`] = `
<DocumentFragment>
  .cache-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.cache-g6qori-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #b5b7bd;
}

.cache-1n3x46n-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #727683;
  background: #e9eaeb;
  border: none;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="cache-1abqgir-Steps ewuati22"
  >
    <li
      class="cache-g6qori-Step ewuati21"
    >
      <div
        class="cache-1n3x46n-StyledContainer e11loam60"
      >
        1
      </div>
      <div
        class="cache-66nq81-StyledDiv ewuati20"
      >
        <div>
          Item 1 with disabled state
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with small size 1`] = `
<DocumentFragment>
  .cache-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.cache-ubtlu3-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.cache-rxjap1-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 24px;
  height: 24px;
  font-size: 14px;
}

.cache-1jkk4vs-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 24px;
  font-size: 16px;
}

<ul
    class="cache-1abqgir-Steps ewuati22"
  >
    <li
      class="cache-ubtlu3-Step ewuati21"
    >
      <div
        class="cache-rxjap1-StyledContainer e11loam60"
      >
        1
      </div>
      <div
        class="cache-1jkk4vs-StyledDiv ewuati20"
      >
        Item 1 small
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
